# cli_games

./: Makefile  README.md  README.md.save  pyproject.toml
.github/workflows/: hexlet-check.yml  python-package.yml
brain_games/: calculate.py  check_even_odd.py  cli.py  game_engine.py  greeting.py  nod.py  prime.py  progression.py
brain_games/games/: calc.py  divisor.py  parity.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_even.py.save  brain_games.py  brain_games.py.save  brain_gcd.py  brain_prime.py  brain_progression.py
